--- a/css/styles.css
+++ b/css/styles.css
@@ -10883,3 +10883,34 @@ header {
   height: 100vh;
   overflow: hidden;
 }
+
+@media (max-width: 1533px) {
+  header {
+    height: 90vh;
+  }
+}
+
+@media (max-width: 1173px) {
+  header {
+    height: 80vh;
+  }
+}
+
+@media (max-width: 1047px) {
+  header {
+    height: 70vh;
+  }
+}
+
+@media (max-width: 908px) {
+  header {
+    height: 60vh;
+  }
+}
+
+@media (max-width: 775px) {
+  header {
+    height: 50vh;
+  }
+}
+
