--- a/css/styles.css
+++ b/css/styles.css
@@ -10882,6 +10882,7 @@ header {
   width: 100%;
   height: 100vh;
   overflow: hidden;
+  background-color: rgba(1, 1, 1, 0.3);
 }
 
 @media (max-width: 1533px) {
